// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLink handles children 1`] = `
<DocumentFragment>
  <mock-link
    classname="insights-link"
    href="test"
    target="_blank"
  >
    link text
  </mock-link>
</DocumentFragment>
`;

exports[`NewTabLink renders content with custom className 1`] = `
<DocumentFragment>
  <mock-link
    classname="insights-link custom-class"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;

exports[`NewTabLink renders content without custom className 1`] = `
<DocumentFragment>
  <mock-link
    classname="insights-link"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;
